# IPPS

./: Adaptive Thresholding.py  AdaptiveThresholding.py  Cld  Cld.py  Gem.py  Hough.py  HoughA.py  ImageProcessor.exe - Shortcut.lnk  Problems.txt  ThresholdingA.py  accelerator.cp313-win_amd64.pyd  accelerator.cpp  advanced_fiber_inspector.py  advanced_scratch_detection.py  advanced_visualization.py  analysis.py  anomaly_detection.py  calibration.py  circle_detector.py  config.json  config_and_setup.py  config_loader.py  defect_analysis  defect_analysis.py  dscope_accelerator.cp313-win_amd64.pyd  dscope_accelerator.cpp  huf_elim.py  image_processing.py  inverse_heatmap.py  main.py  ml_classifier.py  padim_specific.py  pixel_defects.py  pyproject.toml  readme.md  reporting.py  requirements.txt  run.py  scratch_dataset_handler.py  segdecnet_integration.py  (+5 more)
611/: Davids.py  batch_processor.py  circle_detector.py  inten50_100.py  split_to_mask.py  visualizer.py
611_2/: batch_processor.py  circle_detector.py  circle_split.py  cli_tool.py  defect_detector.py  defect_validator.py  fiber_locator.py  fiber_optic_masking.py  image_loader.py  mask_creator.py  parameter_tuner.py  region_analyzer.py  simple_pipeline.py  (+4 more)
TEST14LATEST/: accelerator.cp313-win_amd64.pyd  advanced_scratch_detection.py  advanced_visualization.py  analysis.py  anomalib_integration.py  calibration.py  config.json  config_loader.py  dscope_accelerator.cpp  image_processing.py  main.py  padim_integration.py  pyproject.toml  reporting.py  run.py  segdecnet_integration.py  setup.py  unet_segmentation.py
(+372 files in other folders)
