[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "dscope-accelerator"
version = "0.1.0"
authors = [
    { name = "Gemini", email = "na@example.com" },
]
description = "C++ accelerator for D-Scope Blink image processing."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "opencv-python",
    "pandas",
    "scipy",
    "scikit-image",
    "pywavelets",
    "circle-fit",
    "matplotlib>=3.5.3",
]

[tool.setuptools]
py-modules = [
    "run",
    "main",
    "image_processing",
    "analysis",
    "config_loader",
    "calibration",
    "reporting",
    "advanced_visualization"
]
